# anynet

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TCPNet.cmake  conanfile.py  conanfile.txt  configure.sh
exemple/client/include/: ExempleClient.hpp
exemple/client/src/: ExempleClient.cpp  client.cpp
exemple/common/include/: ExempleMessageType.hpp
exemple/common/src/: ExempleMessageType.cpp
exemple/server/include/: ExempleServer.hpp
exemple/server/src/: ExempleServer.cpp  server.cpp
include/: IConnection.hpp  TCPNet.hpp  TConnection.hpp  TConverter.hpp  TDelegatedConnection.hpp  TICallbackHandler.hpp  TServer.hpp
